<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_edit_notes.AddEditNoteActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/layout_app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:transitionName="@string/transition_title"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/note_description"
        android:transitionName="@string/transition_desc"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/til_note_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/btn_save_note"
        android:paddingBottom="@dimen/_10sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:transitionName="@string/transition_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:layout_marginBottom="@dimen/_16sdp"
        android:contentDescription="@string/save_note" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/_16sdp"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/_16sdp"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>